--- a/About.html
+++ b/About.html
@@ -1,10 +1,11 @@
+<?php include 'settings.php'; ?> 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Cipheria</title>
-    <link rel="stylesheet" href="aboutstyle.css">
+    <link rel="stylesheet" href="Aboutstyle.css">
 </head>
 <body>
     <div class="container">
@@ -41,7 +42,7 @@
             </fieldset>
         </div>
         <p>Join Cipheria in shaping the future of technology—where innovation meets security to build a smarter digital world.</p>
-        <a href="index.html" class="back-to-home">← Back to Home</a>
+        <a href="index.php" class="back-to-home">← Back to Home</a>
     </div>
 </body>
 </html>
