--- a/Aboutus.html
+++ b/Aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="aboutusstyle.css">
+    <link rel="stylesheet" href="Aboutusstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -20,50 +20,50 @@
             <dd>Your Group ID</dd>
 
             <dt>Tutor's Name:</dt>
-            <dd>Ms.Tra</dd>
+            <dd>Your Tutor's Name</dd>
         </dl>
 
         <h3>Members Contribution</h3>
         <div class="members">
             <figure class="member">
-                <img src="harry.jpg" alt="Member 1">
+                <img src="z6357212506347_fce72966f8d1f1f8c39b305a2893462f.jpg" alt="Member 1">
                 <figcaption>
-                    <strong>Truong Nam Hung</strong>
-                    <p>Role: Builder and Cipheria Enhancer</p>
-                    <p>Contribution: Making login form and jobs html and css.</p>
+                    <strong>Member 1</strong>
+                    <p>Role: Developer</p>
+                    <p>Contribution: Backend Development</p>
                 </figcaption>
             </figure>
 
             <figure class="member">
-                <img src="owner.jpg" alt="Member 2">
+                <img src="member2.jpg" alt="Member 2">
                 <figcaption>
-                    <strong>Nguyen Hoang Dung</strong>
-                    <p>Role: Video maker and also a Builder</p>
-                    <p>Contribution: group leader, video script writer, job listings html.</p>
+                    <strong>Member 2</strong>
+                    <p>Role: Designer</p>
+                    <p>Contribution: UI/UX Design</p>
                 </figcaption>
             </figure>
 
             <figure class="member">
-                <img src="Screenshot 2025-03-02 214420.png" alt="Member 3">
+                <img src="member3.jpg" alt="Member 3">
                 <figcaption>
-                    <strong>Ho Dinh Bao An</strong>
-                    <p>Role: UI/UX Improver, Quality Assurance</p>
-                    <p>Contribution: review and fix issues to enhance quality for the user.</p>
+                    <strong>Member 3</strong>
+                    <p>Role: Researcher</p>
+                    <p>Contribution: Data Analysis</p>
                 </figcaption>
             </figure>
 
             <figure class="member">
-                <img src="Screenshot 2025-03-02 214201.png" alt="Member 4">
+                <img src="member4.jpg" alt="Member 4">
                 <figcaption>
-                    <strong>Ho Dinh Hoai An</strong>
-                    <p>Role: Founder and Builder</p>
-                    <p>Contribution: UI/UX Designer of Cipheria</p>
+                    <strong>Member 4</strong>
+                    <p>Role: Tester</p>
+                    <p>Contribution: Quality Assurance</p>
                 </figcaption>
             </figure>
         </div>
 
         <figure class="group-photo">
-            <img src="Screenshot 2025-03-02 215236.png" alt="Group Photo" />
+            <img src="group-photo.jpg" alt="Group Photo" />
             <figcaption>Our Team</figcaption>
         </figure>
 
