--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="jobs.html">Job Listings</a></li>
-            <li><a href="apply.html">Apply for a Job</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="apply.php">Apply for a Job</a></li>
+            <li><a href="Aboutus.html">About Us</a></li>
             <li><a href="enhancement.html">Enhancements</a></li>
         </ul>
     </div>
@@ -25,14 +25,14 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="jobs.html">Jobs</a></li>
-                    <li><a href="apply.html">Apply</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="enhancement.html">Enhancements</a></li>
+                    <li><a href="apply.php">Apply</a></li>
+                    <li><a href="About.html">About</a></li>
+                    <li><a href="enhancements.html">Enhancements</a></li>
                 </ul>
             </nav>
             <div class="auth-buttons">
                 <a href="login.html"><button>Log in</button></a>
-                <a href="apply.html"><button class="primary">Get Started</button></a>
+                <a href="apply.php"><button class="primary">Get Started</button></a>
             </div>            
         </header>
 
@@ -41,14 +41,9 @@
             <p>Your future in IT starts here. Explore job opportunities, learn more about our team, and apply now!</p>
             <div class="buttons">
                 <a href="jobs.html"><button class="primary">View Jobs</button></a>
-                <a href="apply.html"><button class="secondary">Apply Now</button></a>
+                <a href="apply.php"><button class="secondary">Apply Now</button></a>
             </div>
-        </main> 
-        <footer>
-            <p>Contact us: <a href="mailto:cipheria-team@swin.edu.au">cipheria-team@swin.edu.au</a></p>
-            <p><a href="apply.html"><button type="submit" class="signup-btn" > Apply Now</a></button></p>
-            <p><a href="https://www.youtube.com/watch?v=8E3aLM1lmOE"> Youtube video</a></button></p>
-        </footer>
+        </main>
     </div>
 </body>
 </html>
