--- a/About.html
+++ b/About.html
@@ -1,11 +1,10 @@
-<?php include 'settings.php'; ?> 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Cipheria</title>
-    <link rel="stylesheet" href="Aboutstyle.css">
+    <link rel="stylesheet" href="aboutstyle.css">
 </head>
 <body>
     <div class="container">
@@ -13,7 +12,7 @@
         <div class="grid">
             <fieldset>
                 <legend>Who We Are</legend>
-                <p>Cipheria is a cutting-edge IT solutions provider dedicated to delivering innovative technology services that empower businesses to thrive in the digital landscape. With expertise in software development, cybersecurity, cloud computing, and IT consulting, we offer tailored solutions that drive efficiency, security, and growth.</p>
+                <p>Cipheria is a cutting-edge IT solutions provider dedicated to delivering innovative safety services that empower businesses to thrive in the digital landscape. With expertise in software development, cybersecurity, cloud computing, and IT consulting, we offer tailored solutions that drive efficiency, security, and growth.</p>
             </fieldset>
 
             <fieldset>
@@ -42,7 +41,7 @@
             </fieldset>
         </div>
         <p>Join Cipheria in shaping the future of technology—where innovation meets security to build a smarter digital world.</p>
-        <a href="index.php" class="back-to-home">← Back to Home</a>
+        <a href="index.html" class="back-to-home">← Back to Home</a>
     </div>
 </body>
 </html>
