--- a/enhancement.html
+++ b/enhancement.html
@@ -8,62 +8,76 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h2>Enhancements</h2>
+    <h1>Enhancements</h1>
     <div class="container">
         <div class="box">
             <div class="number">01</div>
             <div class="content">
-                <h3>Cloud Computing Integration</h3>
-                <p>Enhancing scalability, security, and remote access by adopting cloud solutions.</p>
+                <h3>outline: ;</h3>
+                <p> creates a visible border around an element without affecting its size or layout.</p>
             </div>
         </div>
         <div class="box">
             <div class="number">02</div>
             <div class="content">
-                <h3>Cybersecurity Upgrades</h3>
-                <p>Implementing multi-factor authentication, AI-driven threat detection, and endpoint protection.</p>
+                <h3>flex-direction: column;</h3>
+                <p>It makes a Flexbox container arrange its items vertically (top to bottom)</p>
             </div>
         </div>
         <div class="box">
             <div class="number">03</div>
             <div class="content">
-                <h3>Automation & AI Implementation</h3>
-                <p>Using AI-driven chatbots, automated workflows, and robotic process automation (RPA).</p>
+                <h3>transition: transform 0.3s ease, box-shadow 0.3s ease;</h3>
+                <p>The ease timing function makes CSS transitions and animations smooth by starting slow, speeding up, and then slowing down at the end.</p>
             </div>
         </div>
         <div class="box">
             <div class="number">04</div>
             <div class="content">
-                <h3>Agile & DevOps Adoption</h3>
-                <p>Enhancing software development with Agile methodologies and DevOps practices.</p>
+                <h3>gap: 15px;</h3>
+                <p>It creates space between items.</p>
             </div>
         </div>
         <div class="box">
             <div class="number">05</div>
             <div class="content">
-                <h3>Customer Experience (CX) Improvement</h3>
-                <p>Enhancing digital customer support with AI-powered chat, self-service portals, and engagement tools.</p>
+                <h3>box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8);</h3>
+                <p>It adds a shadow around the element.</p>
             </div>
         </div>
         <div class="box">
             <div class="number">06</div>
             <div class="content">
-                <h3>Big Data & Analytics Utilization</h3>
-                <p>Leveraging data analytics, business intelligence (BI) tools, and machine learning.</p>
+                <h3>transform: translateY(-3px);</h3>
+                <p>Moves the button 3px upwards when hovered</p>
             </div>
         </div>
         <div class="box">
             <div class="number">07</div>
             <div class="content">
-                <h3>Hybrid & Remote Work Solutions</h3>
-                <p>Implementing collaboration tools like Microsoft Teams, Slack, and Zoom with secure access.</p>
+                <h3>cursor: pointer;</h3>
+                <p>Changes the mouse cursor to a hand when hovering over the button to show it's clickable.</p>
             </div>
         </div>
         <div class="box">
             <div class="number">08</div>
             <div class="content">
-                <h3>Sustainable IT & Green Computing</h3>
-                <p>Optimizing data centers, reducing energy consumption, and adopting eco-friendly IT practices.</p>
+                <h3>transition: background 0.3s, transform 0.3s;</h3>
+                <p>Adds smooth transitions for the background color and transform properties over 0.3 seconds when they change</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="number">09</div>
+            <div class="content">
+                <h3>figcaption in html</h3>
+                <p> is used to add a caption to a figure element, which usually contains an image, video, chart, or illustration.</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="number">10</div>
+            <div class="content">
+                <h3>opacity</h3>
+                <p> icontrols how transparent an element is.</p>
             </div>
         </div>
         <a href="index.html" class="back-to-home">← Back to Home</a>
